# agentic-ailangraph

./: .gitignore  README.md
components/: .dockerignore  Dockerfile  first.ipynb  functions.py  graph.py  langchaindocument.py  langgraph.json  langgraphdocument.py  pyproject.toml  requirements.txt  retreivertool.py  scrape.py  testing.py  toollist.py  tryingdocker.py
