[project]
name = "secondlangchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "ipykernel>=7.2.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph-cli[inmem]>=0.4.27",
    "playwright>=1.60.0",
    "sentence-transformers>=5.5.1",
    "unstructured>=0.22.31",
    "uvicorn>=0.48.0",
]
